OR-26 : get offers for a myaudi user, add php doc, add serialization for myaudi
